@@ -1,3 +1,8 @@
+2006-09-27  Nick Clifton  <nickc@redhat.com>
+
+	* output-file.c (output_file_close): Prevent an infinite loop
+	reporting that stdoutput could not be closed.
+
 2006-09-26  Mark Shinwell  <shinwell@codesourcery.com>
             Joseph Myers  <joseph@codesourcery.com>
             Ian Lance Taylor  <ian@wasabisystems.com>
